tests/errors/test_53.x
// Array in struct definition must have size defined

struct ArrayWrapper -> {
    array: int[]
}

fn main() -> int {}